# labs-and-practice

lab_2/: CMakeLists.txt  main.cpp
lab_3/: CMakeLists.txt  lab_3_.cpp  lab_3_.h
lab_4/: CMakeLists.txt  lab_4.cpp  lab_4.h
lab_5/: CMakeLists.txt  main.cpp
lab_7/: CMakeLists.txt  main.cpp
lab_8/: main.cpp
uchpr1/: CMakeLists.txt  main.cpp
uchpr2/: CMakeLists.txt  main.cpp
uchpr4/: CMakeLists.txt  main.cpp  text.txt
